--- a/CRUD_Operaton/.project
+++ b/CRUD_Operaton/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ques1</name>
+	<name>CRUD_Operaton</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1684700434703</id>
+			<id>1684700434653</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
