--- a/CRUD_SpringBoot/src/main/resources/application.properties
+++ b/CRUD_SpringBoot/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url="jdbc:mysql://localhost:3306/SpringTable"
-spring.datasource.username="root"
-spring.datasource.password="root"
+#server.servlet.context-path=/vish
+server.port=9090
+spring.datasource.url=jdbc:mysql://localhost:3306/SpringTable
+
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
